HW/hw6/result/result_027.txt
dsa15_027:
[Copy] $cp -f ...
------
[Compiling]
$make
gcc -O2 -std=c99 -Wall avl.c -c
gcc -O2 -std=c99 -Wall rb.c -c
gcc -O2 -std=c99 -Wall bst.c -c
g++ -O2 -std=c++11 -Wall avl.o rb.o bst.o hw6_2.o -o hw6_2
gcc -O2 -std=c99 -Wall avl_ntudsa.c -c
gcc -O2 -std=c99 -Wall hw6_3.c -c
Makefile:21: recipe for target 'hw6_3.o' failed
hw6_3.c: In function ‘main’:
hw6_3.c:89:18: error: ‘count’ undeclared (first use in this function)
    printf("%d\n",count);
                  ^
hw6_3.c:89:18: note: each undeclared identifier is reported only once for each function it appears in
make: *** [hw6_3.o] Error 1

$make hw6_2
make: 'hw6_2' is up to date.

$make hw6_3
gcc -O2 -std=c99 -Wall hw6_3.c -c
Makefile:21: recipe for target 'hw6_3.o' failed
hw6_3.c: In function ‘main’:
hw6_3.c:89:18: error: ‘count’ undeclared (first use in this function)
    printf("%d\n",count);
                  ^
hw6_3.c:89:18: note: each undeclared identifier is reported only once for each function it appears in
make: *** [hw6_3.o] Error 1

------

[Executing] $./hw6_2

real	0m0.043s
user	0m0.000s
sys	0m0.000s
Result: WA
---

real	0m0.054s
user	0m0.000s
sys	0m0.000s
Result: WA
---

real	0m0.075s
user	0m0.000s
sys	0m0.000s
Result: WA
---

real	0m0.081s
user	0m0.000s
sys	0m0.000s
Result: AC
---

real	0m0.079s
user	0m0.000s
sys	0m0.000s
Result: AC
---
Total: 10
------

[Error]Execute hw6_3 error: Executable file not found
